--- a/milestones/m3-coding.ipynb
+++ b/milestones/m3-coding.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# Milestone 3: Exploratory Data Analysis and Baseline Model\n",
-    "## Predicting Formula 1 Undercut Success in the Hybrid Era (2014-2020)\n",
+    "## Predicting Formula 1 Undercut Success in the Hybrid Era (2014-2024)\n",
     "\n",
-    "**CS109A - Fall 2025**\n",
+    "**CS1090A - Fall 2025**\n",
     "\n",
     "---"
    ]
@@ -176,7 +176,7 @@
     "## 3. Data Description and Sources\n",
     "\n",
     "### Data Source\n",
-    "**Formula 1 World Championship (1950-2020)** from Kaggle\n",
+    "**Formula 1 World Championship (1950-2024)** from Kaggle\n",
     "- Source: [Kaggle Dataset](https://www.kaggle.com/datasets/rohanrao/formula-1-world-championship-1950-2020)\n",
     "- License: CC0 - Public Domain\n",
     "- Original Source: Ergast Developer API (http://ergast.com/mrd/)\n",
@@ -261,7 +261,7 @@
     "## 4. Data Cleaning and Validation\n",
     "\n",
     "### Undercut Dataset Construction\n",
-    "We build an **undercut attempts dataset** by:\n",
+    "We build an undercut attempts dataset by:\n",
     "1. Identifying all pit stops in Hybrid Era races\n",
     "2. Finding situations where driver pitted with car directly ahead\n",
     "3. Tracking if rival pitted within 5-lap window\n",
@@ -1107,19 +1107,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Validation Summary\n",
-    "\n",
-    "**Data Completeness**: Minimal missing values\n",
-    "**Temporal Coverage**: 2014-2020 captured\n",
-    "**Logical Consistency**: Positions and laps valid\n",
-    "**Feature Quality**: Computed correctly\n",
-    "**Target Variable**: Binary labels assigned"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "---\n",
     "<a id='eda'></a>\n",
     "## 5. Exploratory Data Analysis\n",
@@ -1526,10 +1513,10 @@
    "metadata": {},
    "source": [
     "**Impact on Project:**\n",
-    "- Gap to leader most important predictor\n",
-    "- Low correlations suggest non-linear relationships\n",
-    "- May need interaction terms or non-linear models\n",
-    "- Grid position has minimal effect"
+    "- Pit stop times show the strongest linear correlation (pit_ms: 0.14, a_pit_ms: 0.12)\n",
+    "- All correlations are weak (< 0.15), suggesting non-linear relationships dominate\n",
+    "- Will need interaction terms or non-linear models (Random Forest, XGBoost) to capture complex patterns\n",
+    "- Grid position has minimal linear effect, but may matter in interactions"
    ]
   },
   {
@@ -1720,22 +1707,36 @@
     "<a id='insights'></a>\n",
     "## 6. Meaningful Insights and Noteworthy Findings\n",
     "\n",
-    "### 1. **Class Imbalance**\n",
-    "- Only **10.1%** of undercut attempts succeed\n",
-    "- Use precision, recall, AUC (not just accuracy)\n",
-    "- Apply class weights in models\n",
+    "### 1. Circuit is the Dominant Factor\n",
+    "- Circuit characteristics overwhelmingly determine undercut success rates\n",
+    "- Top circuits (Circuit Gilles Villeneuve 34.5%, Albert Park 26.1%, Monaco 25.0%) achieve 2.5-3.5x higher success rates than the overall 10.1% average\n",
+    "- Circuit IDs dominate the top features in our baseline model\n",
+    "- Must include circuit as categorical feature; consider hierarchical models\n",
     "\n",
-    "### 2. **Tire Age Matters**\n",
-    "- Fresh tire advantage crucial\n",
-    "- Include tire age differential\n",
+    "### 2. Pit Stop Performance is Critical\n",
+    "- Pit stop times show the strongest linear correlation with success (pit_ms: 0.14, a_pit_ms: 0.12)\n",
+    "- Faster pit stops for the attacker and slower stops for the leader both increase success probability\n",
+    "- Pit stop efficiency is a key differentiator in undercut attempts\n",
     "\n",
-    "### 3. **Circuit Dependencies**\n",
-    "- Success rates vary heavily across circuits\n",
-    "- Include circuit as categorical feature, consider hierarchical models\n",
+    "### 3. Severe Class Imbalance\n",
+    "- Only 10.1% of undercut attempts succeed, creating a challenging classification problem\n",
+    "- Need appropriate metrics (precision, recall, F1, AUC-ROC rather than accuracy)\n",
+    "- Apply class weights, threshold tuning, or advanced sampling methods\n",
     "\n",
-    "### 4. **Weak Linear Relationships**\n",
-    "- Low correlations suggest non-linear patterns\n",
-    "- May need complex models beyond baseline\n"
+    "### 4. Weak Linear Relationships\n",
+    "- All feature correlations with success are weak (< 0.15), suggesting non-linear interactions dominate\n",
+    "- Will need tree-based models (Random Forest, XGBoost) to capture complex patterns\n",
+    "- Feature interactions (e.g., circuit × pit_time, gap × tire_age_diff) may be crucial\n",
+    "\n",
+    "### 5. Temporal and Contextual Variation\n",
+    "- Success rates vary significantly across years (5-14%)\n",
+    "- Regulatory changes, tire compounds, and car performance evolution impact undercut effectiveness\n",
+    "- Year 2022 identified as particularly unfavorable for undercuts\n",
+    "\n",
+    "### 6. Tire Age Dynamics\n",
+    "- Leader's tire age shows negative correlation (-0.069) with success\n",
+    "- Undercuts are more difficult when the leader has fresher tires\n",
+    "- Timing undercuts when the leader's tires are degraded is strategically important\n"
    ]
   },
   {
@@ -2586,16 +2587,20 @@
    "source": [
     "### Model Performance Summary\n",
     "\n",
-    "**Baseline: Logistic Regression with Balanced Class Weights**\n",
+    "Baseline: Logistic Regression with Balanced Class Weights\n",
     "\n",
-    "**Key Takeaways:**\n",
-    "1. Model performs better than random (AUC > 0.5)\n",
-    "2. Strongest features: circuit, year=2022, pit time\n",
-    "3. Explore:\n",
-    "- Non-linear models (Decision Trees, Random Forest, XGBoost)\n",
-    "- Hierarchical models\n",
-    "- Feature interactions\n",
-    "- Advanced sampling (SMOTE)"
+    "Key Takeaways:\n",
+    "1. Model performs better than random (AUC-ROC = 0.71 on test set)\n",
+    "2. Circuit characteristics dominate feature importance, validating EDA findings\n",
+    "3. Pit stop times (a_pit_ms) are the strongest non-circuit predictor\n",
+    "4. Year 2022 shows strong negative effect, consistent with temporal variation observed in EDA\n",
+    "5. Weak linear relationships suggest non-linear models will likely improve performance\n",
+    "\n",
+    "Next Steps:\n",
+    "- Non-linear models (Decision Trees, Random Forest, XGBoost) to capture feature interactions\n",
+    "- Hierarchical models that explicitly account for circuit effects\n",
+    "- Feature interactions (circuit × pit_time, gap × tire_age_diff)\n",
+    "- Advanced sampling (SMOTE) for class imbalance"
    ]
   },
   {
@@ -2606,47 +2611,34 @@
     "\n",
     "## 9. Conclusion\n",
     "\n",
-    "### Summary\n",
+    "### Key Findings from Exploratory Data Analysis\n",
     "\n",
-    "1. **Data Preparation**: Built comprehensive undercut attempts dataset\n",
-    "   - Applied 2-second gap filter for legitimate attempts \n",
-    "   - Computed features from domain knowledge\n",
+    "Our exploratory analysis revealed several critical insights that fundamentally shape our understanding of undercut success in Formula 1:\n",
     "\n",
-    "2. **Exploratory Analysis**: Uncovered critical patterns\n",
-    "   - Circuit choice matters a lot\n",
-    "   - Pit time is a key predictor \n",
-    "   - Gap is primary predictor but weak linearly\n",
-    "   - Tire age differential more important than absolute values\n",
+    "1. Circuit is the Dominant Factor: The most striking finding is that circuit characteristics overwhelmingly determine undercut success rates. Top-performing circuits like Circuit Gilles Villeneuve (34.5% success), Albert Park (26.1%), and Monaco (25.0%) achieve 2.5-3.5x higher success rates than the overall average of 10.1%. This circuit dependency is so strong that circuit IDs dominate the top features in our baseline model, suggesting that track layout, overtaking difficulty, and pit lane characteristics are more predictive than race dynamics alone.\n",
     "\n",
-    "3. **Feature Engineering**: Created meaningful features\n",
-    "   - tire_age_diff: Differential between attacker and leader\n",
-    "   - gap_per_lap: Normalized gap metric\n",
-    "   - Interaction terms for future models\n",
+    "2. Pit Stop Performance Matters: Pit stop times show the strongest linear correlation with undercut success (pit_ms: 0.14, a_pit_ms: 0.12), indicating that efficient pit stops are crucial for successful undercuts. Faster pit stops for the attacker and slower stops for the leader both increase success probability.\n",
     "\n",
-    "4. **Baseline Model**: Logistic regression with balanced class weights\n",
-    "   - Expected AUC-ROC: 0.65-0.75 (better than random)\n",
-    "   - Interpretable coefficients validate domain knowledge\n",
+    "3. Severe Class Imbalance: Only 10.1% of undercut attempts succeed, creating a challenging classification problem. This imbalance requires careful metric selection (precision, recall, F1, AUC-ROC rather than accuracy) and specialized techniques like class weighting, threshold tuning, or advanced sampling methods.\n",
     "\n",
-    "5. **Class Imbalance Handling**: Implemented multiple techniques\n",
-    "   - Threshold tuning for precision-recall trade-off\n",
-    "   - Undersampling to improve minority class detection\n",
-    "   - Comparison framework for context-dependent selection\n",
+    "4. Weak Linear Relationships: Most features show low correlations with success (all < 0.15), suggesting that undercut success depends on non-linear interactions between factors rather than simple linear relationships. This finding motivates exploration of tree-based models (Random Forest, XGBoost) that can capture these complex patterns.\n",
     "\n",
-    "### Next Steps\n",
+    "5. Temporal and Contextual Variation: Success rates vary significantly across years (5-14%), indicating that regulatory changes, tire compounds, and car performance evolution all impact undercut effectiveness. The baseline model identified year 2022 as particularly unfavorable for undercuts.\n",
     "\n",
-    "1. **Non-linear Models**: Random Forest, XGBoost for interaction effects\n",
-    "2. **SMOTE**: Synthetic oversampling for better class balance\n",
-    "3. **Hyperparameter Tuning**: Cross-validation with stratified folds\n",
-    "4. **Feature Interactions**: Explicit gap × tire_age_diff terms\n",
-    "5. **Additional Features**: Weather, track temperature, tire compounds\n",
+    "6. Tire Age Dynamics: The leader's tire age shows a negative correlation (-0.069) with success, meaning undercuts are more difficult when the leader has fresher tires. This validates the strategic importance of timing undercuts when the leader's tires are degraded.\n",
     "\n",
-    "### Real-World Impact\n",
+    "### Data Preparation and Modeling\n",
     "\n",
-    "This model enables F1 teams to:\n",
-    "- Make data-driven pit strategy decisions in real-time\n",
-    "- Assess undercut risk vs. reward trade-offs\n",
-    "- Optimize tire management strategies\n",
-    "- Develop circuit-specific tactical approaches"
+    "We constructed a comprehensive dataset of 761 legitimate undercut attempts (filtered to gaps <= 2 seconds) from the Hybrid Era (2014-2024). Our baseline logistic regression model achieved an AUC-ROC of 0.71 on the test set, demonstrating predictive capability beyond random chance. The model's feature importance analysis confirmed that circuit characteristics are the primary drivers of success, validating our EDA findings.\n",
+    "\n",
+    "### Implications for Future Modeling\n",
+    "\n",
+    "These findings directly inform our modeling strategy:\n",
+    "\n",
+    "- Circuit must be a core feature: Given its dominance, we should explore circuit-specific models or hierarchical approaches that account for track characteristics\n",
+    "- Non-linear models are essential: The weak linear relationships suggest tree-based models (Random Forest, XGBoost) will likely outperform linear models\n",
+    "- Feature interactions matter: Explicit interaction terms (e.g., gap × tire_age_diff, circuit × pit_time) may capture the complex relationships\n",
+    "- Class imbalance techniques: SMOTE or other advanced sampling methods may improve minority class detection beyond threshold tuning"
    ]
   }
  ],
