--- a/milestones/m4-coding.ipynb
+++ b/milestones/m4-coding.ipynb
@@ -3018,9 +3018,9 @@
     "\n",
     "### Limitations and Future Work\n",
     "\n",
-    "**Limitations:** Linear model, doesn't account for driver skill or tire compounds, limited to 2s gap threshold, class imbalance challenges remain.\n",
+    "**Limitations:** Linear model, no interaction terms, doesn't account for driver skill or tire compounds, limited to 2s gap threshold, class imbalance challenges remain.\n",
     "\n",
-    "**Future Directions:** Non-linear models (Random Forest, XGBoost), driver/team random effects, tire degradation modeling, weather/safety car factors.\n",
+    "**Future Directions:** Non-linear models (Random Forest, XGBoost), add polynomial features, driver/team random effects, tire degradation modeling, weather/safety car factors.\n",
     "\n",
     "### Conclusion\n",
     "\n",
