--- a/milestones/m5-coding.ipynb
+++ b/milestones/m5-coding.ipynb
@@ -101,7 +101,7 @@
     "## 2. Code Organization\n",
     "\n",
     "### Notebook Structure\n",
-    "This notebook follows a linear pipeline structure:\n",
+    "This notebook follows the following structure:\n",
     "\n",
     "```\n",
     "Data Loading → Cleaning → EDA → Feature Engineering → Modeling → Evaluation\n",
